css/style.scss
---
---

@import "variables";

html {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Open Sans, sans-serif;
  font-size: 16px;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: $color-background;
  color: $color-foreground;
  line-height: 1.5;
  margin: 0;
  min-width: 17rem;
  padding: 2rem 2rem 1rem 2rem;
  text-rendering: optimizeLegibility;
  width: 100vw;
}

h1, h2, h3, h4 {
  padding: 0;
  margin: 0;
  line-height: 1;
  font-weight: bold;
  padding: .7em 0;
  font-family: sans-serif;
}

h1 {
  font-size: 3rem;
  padding: 1.5rem 0 .5rem 0;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1rem;
}

p {
  margin: 0;
  padding-top: 0;
  padding-bottom: 1em;
}

section {
  padding-bottom: 1.5rem;
}

a {
  color: $color-highlight;
}

a:active, a:hover {
  color: $color-highlight-active;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;

  .headshot {
    border-radius: 500px;
    border: 5px solid white;
    box-shadow: 0px 0px 3px #999;
    width: 35vw;

    @media screen and (max-width: $breakpoint-small) {
      width: 45vw;
    }

    @media screen and (min-width: $breakpoint-bigboy) {
      width: 20vw;
    }
  }
}

main {
  max-width: 48rem;
}

footer {
  font-size: .7rem;
}

main {
  .about-me {
  }

  .projects {
  }

  .blog-posts {
    .subscribe-link {
      font-size: .8rem;
      padding-bottom: 1rem;

      a {
        color: $color-secondary;
      }
    }

    ul {
      list-style: none;
      padding: 0;
      margin: 0;
    }

    .post-link {
      border-bottom: 1px solid white;
      display: flex;
      justify-content: space-between;
      align-items: baseline;
      padding: 1rem 0;
      text-decoration: none;
      width: 100%;

      &:nth-of-type(1) {
        padding-top: 0;
      }

      .publish-date {
        font-size: .8rem;
        color: $color-secondary;
      }
    }
  }
}

@import "blog_styles";

